--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloud-config/config-dev.yml version=2020.11.12b" 
+  info: "master branch,springcloud-config/config-dev.yml version=2020.11.12c" 
